--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -8,11 +8,16 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-}
-
-.drag-handle {
   cursor: move;
   user-select: none;
+}
+
+.chart-item:active {
+  cursor: grabbing;
+}
+
+.chart-item .chart-actions {
+  cursor: default;
 }
 
 .chart-content {
@@ -35,6 +40,8 @@
   pointer-events: auto;
   z-index: 10;
   position: relative;
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 .btn-icon:hover {
